front page links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Miranda front page links</h1>
+
+  <a href="./html/home.html"></a>
+  <a href="./html/about_us.html"></a>
+  <a href="./html/reservation.html"></a>
+  <a href="./html/contact.html"></a>
+  <a href="./html/room_grid.html"></a>
+  
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
