front page links

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <!-- Add your site or application content here -->
   <h1>Miranda front page links</h1>
 
-  <a href="./html/home.html"></a>
-  <a href="./html/about_us.html"></a>
-  <a href="./html/reservation.html"></a>
-  <a href="./html/contact.html"></a>
-  <a href="./html/room_grid.html"></a>
+  <a href="./html/home.html">HOME</a>
+  <a href="./html/about_us.html">ABOUT US</a>
+  <a href="./html/reservation.html">RESERVATION</a>
+  <a href="./html/contact.html">CONTACT</a>
+  <a href="./html/room_grid.html">ROOM GRID</a>
   
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
