--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body id="index" style="margin:0;padding:0;box-sizing: border-box;">
 
   <!-- Add your site or application content here -->
   <h1>Miranda front page links</h1>
