--- a/html/about_us.html
+++ b/html/about_us.html
@@ -14,31 +14,68 @@
 <body>
    <!-- HEADER -->
    <header>
-      <nav>
-         <ul>
-            <li class="bars"><i class="fas fa-bars"></i></li>
-         </ul> 
-      </nav>
+        <nav >
+        <div class="bars" onclick="document.querySelectorAll('.animation').forEach((el) => el.classList.toggle('active'));"><i class="fas fa-bars"></i></div>
+        <div class="drop_down animation">
+            <ul class="animation">    
+                <li> <a class="button button_brown" href="./about_us.html">About&nbsp;Us</a></li>
+                <li> <a class="button button_brown" href="./room_grid.html">Rooms</a></li>
+                <li> <a class="button button_brown" href="./reservation.html">Offers</a></li>
+                <li> <a class="button button_brown" href="">News</a></li>
+                <li> <a class="button button_brown" href="./contact_us.html">Contact</a></li>
+            </ul> 
 
-      <div class="container_logoH">
-         <div>
+            <div class="container_logoH_nav">
+                <div class="logoH">H</div>
+                <div>
+                    <span class="bold">HOTEL</span> <br>
+                    MIRANDA
+                </div>
+            </div>
+
+            <div class="container_headerInfo">
+                <div class="info_container container_headerInfo_phone">                 
+                    <div class="info">
+                    <div class="title">Phone Number</div>
+                    <div class="data">+908 987 877 09</div>
+                    </div>
+                    <div class="fakeIcon">
+                    <div class="fakeIcon_top"><i class="fas fa-phone"></i></div>
+                    </div>
+                </div>
+        
+                <div class="info_container container_headerInfo_email">                
+                    <div class="info">
+                    <div class="title">Email Address</div>
+                    <div class="data">info@webmail.com</div>
+                    </div>
+                    <div class="fakeIcon">
+                    <div class="fakeIcon_top"><i class="fas fa-envelope"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </nav>
+        </nav>
+
+        <div class="container_logoH">
+        <!-- <div class="logoH">H</div> -->
+        <div>
             <span class="bold">HOTEL</span> <br>
             MIRANDA
-         </div>
-      </div>
-   </header>
+        </div>
+        </div>
+    </header>
 
    <!-- MAIN CONTENT -->   
-   <main id="contact_us">
+   <main id="about_us">
         <!-- MAIN CONTENT - HEADER -->
         <section class="mainContent_header">
             <!-- <div class="subtitle">The ultimate luxury experience</div> -->
-            <div class="title">
-            About us
-            </div>
+            <div class="title">About us</div>
             <div class="buttons">
-            <button class="button button_brown">Take a tour</button>
-            <button class="button button_grey">Learn more</button>
+                <button class="button button_brown">Take a tour</button>
+                <button class="button button_grey">Learn more</button>
             </div>
         </section>
         <!-- MAIN CONTENT - BODY -->
@@ -57,30 +94,30 @@
             <section class="services">                   
                 <div class="container_icons">
                     <div class="container_icon">
-                        <div class="icon">
+                        <div class="icon top">
                             <img src="../img/icons/coffee-cup.png" alt="">
                         </div>
                         <div>Breakfast</div>
                     </div>
-                    <div class="container_icon">
+                    <div class="container_icon middle">
                         <div class="icon">
                             <img src="../img/icons/plane3.png" alt="">
                         </div>
                         <div>Airport pickup</div>
                     </div>
-                    <div class="container_icon">
+                    <div class="container_icon bottom">
                         <div class="icon">
                             <img src="../img/icons/position.png" alt="">
                         </div>
                         <div>City guide</div>
                     </div>
-                    <div class="container_icon">
+                    <div class="container_icon middle">
                         <div class="icon">
                             <img src="../img/icons/bbq.png" alt="">
                         </div>
                         <div>BBQ party</div>
                     </div>
-                    <div class="container_icon">
+                    <div class="container_icon top">
                         <div class="icon">
                             <img src="../img/icons/room.png" alt="">
                         </div>
@@ -202,28 +239,89 @@
    </main>
 
     <!-- FOOTER -->
-    <footer>
-    <div class="copy">
-        copyright by@example
-    </div>
-
-    <div class="rrss">
-        <div>
-            <i class="fab fa-facebook-f"></i>
+    <footer>     
+        <!-- BODY -->
+        <div class="body">
+           <div class="logo_section">
+              <div class="logo_title">
+                 <div class="logo">H</div>
+                 <div class="title"><span>Hotel</span> Miranda</div>
+              </div>
+           
+              <div>
+                 <p>
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Ducimus vel fuga perspiciatis
+                    excepturi nulla odio illo labore tenetur voluptates temporibus!
+                 </p>
+              </div>
+           </div>
+  
+           <div class="services_section">
+              <div class="title">Services.</div>
+              <ul>
+                 <li><span>+</span> Restaurant & Bar</li>
+                 <li><span>+</span> Swimming Pool</li>
+                 <li><span>+</span> Wellness & Spa</li>
+                 <li><span>+</span> Restaurant</li>
+                 <li><span>+</span> Conference Room</li>
+                 <li><span>+</span> Coctail Party House</li>
+                 <li><span>+</span> Gaming Zone</li>
+                 <li><span>+</span> Marrige Party</li>
+                 <li><span>+</span> Party Planning</li>
+                 <li><span>+</span> Tour Consultancy</li>
+              </ul>
+           </div>
+  
+           <div class="contactUs_section">
+              <div class="title">Contact Us.</div>
+              <div class="contacts">
+                 <div class="contact">
+                    <div class="icon"><i class="fas fa-phone-alt"></i></div>
+                    <div class="info_container">
+                       <div class="title">Phone Number</div>
+                       <div class="info">+987 876 765 76 577</div>
+                    </div>
+                 </div>
+                 <div class="contact">
+                    <div class="icon"><i class="fas fa-envelope-open-text"></i></div>
+                    <div class="info_container">
+                       <div class="title">Email Address</div>
+                       <div class="info">info@webmail.com</div>
+                    </div>
+                 </div>
+                 <div class="contact">
+                    <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
+                    <div class="info_container">
+                       <div class="title">Office Address</div>
+                       <div class="info">14/A, Miranda City, NYC</div>
+                    </div>
+                 </div>
+              </div>
+           </div>
         </div>
-        <div>
-            <i class="fab fa-twitter"></i>
+        <!-- COPYRIGHT -->
+        <div class="copy">
+           copyright by@example
         </div>
-        <div>
-            <i class="fab fa-instagram-square"></i>
+        <!-- RRSS -->
+        <div class="rrss">
+           <div>
+              <i class="fab fa-facebook-f"></i>
+           </div>
+           <div>
+              <i class="fab fa-twitter"></i>
+           </div>
+           <div>
+              <i class="fab fa-instagram-square"></i>
+           </div>
+           <div>
+              <i class="fab fa-linkedin"></i>
+           </div>
+           <div>
+              <i class="fab fa-youtube"></i>
+           </div>
         </div>
-        <div>
-            <i class="fab fa-linkedin"></i>
-        </div>
-        <div>
-            <i class="fab fa-youtube"></i>
-        </div>
-    </div>
-    </footer>
+     </footer>
 </body>
 </html>
