--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li><a href="./html/home.html">HOME</a></li>
     <li><a href="./html/about_us.html">ABOUT US</a></li>
     <li><a href="./html/reservation.html">RESERVATION</a></li>
-    <li><a href="./html/contact.html">CONTACT</a></li>
+    <li><a href="./html/contact_us.html">CONTACT</a></li>
     <li><a href="./html/room_grid.html">ROOM GRID</a></li>
   </ul>
   
