--- a/html/room_grid.html
+++ b/html/room_grid.html
@@ -14,30 +14,32 @@
 <body>
    <!-- HEADER -->
    <header>
-      <nav >
+      <nav>
          <div class="bars" onclick="document.querySelectorAll('.animation').forEach((el) => el.classList.toggle('active'));"><i class="fas fa-bars"></i></div>
          <div class="drop_down animation">
             <ul class="animation">    
-               <li> <a class="button button_brown" href="./about_us.html">About&nbsp;Us</a></li>
-               <li> <a class="button button_brown" href="./room_grid.html">Rooms</a></li>
-               <li> <a class="button button_brown" href="./reservation.html">Offers</a></li>
-               <li> <a class="button button_brown" href="">News</a></li>
-               <li> <a class="button button_brown" href="./contact_us.html">Contact</a></li>
+               <li> <a class="button" href="./about_us.html">About&nbsp;Us</a></li>
+               <li> <a class="button" href="./room_grid.html">Rooms</a></li>
+               <li> <a class="button" href="./reservation.html">Offers</a></li>
+               <li> <a class="button" href="">Room Details</a></li>
+               <li> <a class="button" href="./contact_us.html">Contact</a></li>
             </ul> 
 
             <div class="container_logoH_nav">
-               <div class="logoH">H</div>
-               <div>
-                  <span class="bold">HOTEL</span> <br>
-                  MIRANDA
-               </div>
+               <a href="./home.html">
+                  <div class="logoH">H</div>
+                  <div>
+                     <span class="bold">HOTEL</span> <br>
+                     MIRANDA
+                  </div> 
+               </a> 
             </div>
 
             <div class="container_headerInfo">
                <div class="info_container container_headerInfo_phone">                 
                   <div class="info">
                      <div class="title">Phone Number</div>
-                     <div class="data">+908 987 877 09</div>
+                     <div class="data">648714734</div>
                   </div>
                   <div class="fakeIcon">
                      <div class="fakeIcon_top"><i class="fas fa-phone"></i></div>
@@ -47,7 +49,7 @@
                <div class="info_container container_headerInfo_email">                
                   <div class="info">
                      <div class="title">Email Address</div>
-                     <div class="data">info@webmail.com</div>
+                     <div class="data">daniel.revenga.garcia@gmail.com</div>
                   </div>
                   <div class="fakeIcon">
                      <div class="fakeIcon_top"><i class="fas fa-envelope"></i></div>
@@ -383,7 +385,7 @@
    </main>
 
    <!-- FOOTER -->
-   <footer>     
+   <footer> 
       <!-- BODY -->
       <div class="body">
          <div class="logo_section">
@@ -446,25 +448,25 @@
       </div>
       <!-- COPYRIGHT -->
       <div class="copy">
-         copyright by@example
+         copyright by@DanielRevenga
       </div>
       <!-- RRSS -->
       <div class="rrss">
          <div>
-            <i class="fab fa-facebook-f"></i>
+            <a href="https://github.com/DanielRevenga"><i class="fab fa-github"></i></a> 
          </div>
          <div>
-            <i class="fab fa-twitter"></i>
+            <a href="https://www.linkedin.com/in/daniel-revenga-mern-stack/"><i class="fab fa-linkedin"></i></a> 
+         </div>
+         <!-- <div>
+            <a href=""><i class="fab fa-twitter"></i></a> 
          </div>
          <div>
-            <i class="fab fa-instagram-square"></i>
+            <a href=""><i class="fab fa-instagram-square"></i></a> 
          </div>
          <div>
-            <i class="fab fa-linkedin"></i>
-         </div>
-         <div>
-            <i class="fab fa-youtube"></i>
-         </div>
+            <a href=""><i class="fab fa-youtube"></i></a> 
+         </div> -->
       </div>
    </footer>
 </body>
