Basic front-end structure complete

--- a/html/contact_us.html
+++ b/html/contact_us.html
@@ -22,7 +22,7 @@
             <ul class="animation">    
                <li> <a class="button" href="./about_us.html">About&nbsp;Us</a></li>
                <li> <a class="button" href="./room_grid.html">Rooms</a></li>
-               <li> <a class="button" href="./reservation.html">Offers</a></li>
+               <li> <a class="button" href="./offers.html">Offers</a></li>
                <li> <a class="button" href="">Room Details</a></li>
                <li> <a class="button" href="./contact_us.html">Contact</a></li>
             </ul> 
@@ -109,7 +109,6 @@
                 </div>
             </div>
         </section>
-
 
         <!-- MAIN CONTENT - CONTACT DETAILS -->
         <section class="contact_details desktop">
@@ -236,10 +235,11 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830929283!2d-74.11976365596463!3d40.697663748538346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNueva%20York%2C%20EE.%20UU.!5e0!3m2!1ses!2ses!4v1637499943335!5m2!1ses!2ses"
                 style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-
-        
+        </div>  
     </main>
+
+   <!-- ANCHOR TOP -->
+   <a href="#top" class="anchorTop"><i class="fas fa-arrow-up"></i></a>
 
    <!-- FOOTER -->
    <footer> 
