Basic front-end structure complete

--- a/html/home.html
+++ b/html/home.html
@@ -457,7 +457,7 @@
             </div> -->
          </div>
 
-         <div class="services_section">
+         <!-- <div class="services_section">
             <div class="title">Services.</div>
             <ul>
                <li><span>+</span> Restaurant & Bar</li>
@@ -471,7 +471,7 @@
                <li><span>+</span> Party Planning</li>
                <li><span>+</span> Tour Consultancy</li>
             </ul>
-         </div>
+         </div> -->
 
          <div class="contactUs_section">
             <div class="title">Contact Us.</div>
