Basic front-end structure complete

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -260,7 +260,7 @@
    </main>
 
    <!-- ANCHOR TOP -->
-   <div class="anchorTop"><i class="fas fa-arrow-up"></i></div>
+   <a class="anchorTop" href="#top"><i class="fas fa-arrow-up"></i></a>
 
     <!-- FOOTER -->
    <footer> 
